tests/errors/test_49.x
// No enum members

enum bar -> {}

fn main() -> i64 {}